update portfolio history